--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule ".themes/MediumFox"]
 	path = .themes/MediumFox
 	url = https://github.com/sevenadrian/MediumFox
+[submodule ".themes/BlogTheme"]
+	path = .themes/BlogTheme
+	url = https://github.com/rastersize/BlogTheme.git
