Fixing up welcome page

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 url: http://lgsanjos.github.io
 title: lgsanjos' Blog
-subtitle: "Getting Pet Projects Done"
+subtitle: ""
 author: lgsanjos
 simple_search: https://www.google.com/search
 description:
