Changed picture and minor improves

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ subtitle: "I'm a full stack developer and here are some of my thoughts"
 author: lgsanjos
 author_name: "Luiz Guilherme"
 simple_search: https://www.google.com/search
-description: "I'm a full stack developer and here are some of my thoughts"
+description: "I'm a full stack developer and here are some of my thoughts and findings"
 
 # Default date format is "ordinal" (resulting in "July 22nd 2007")
 # You can customize the format as defined in
